--- a/index.css
+++ b/index.css
@@ -17,6 +17,9 @@ h1 {
     margin-left: 20px;
 }
 
+h2 {
+    text-decoration: underline;
+}
 h3 {
     margin-bottom: -10px;
 }
@@ -27,7 +30,7 @@ h3 {
 .subtitle {
     margin: -20px 0 20px 50px;
     padding-top: 0;
-    color: #666666;
+    color: #a7b0b4;
 }
 .header {
     width: 90%;
@@ -38,7 +41,8 @@ h3 {
     left: 0;
     box-shadow: black 0 0 40px;
     border-radius: 0 0 30px 0;
-    background-color: darkgrey;
+    background-color: #545e69;
+    color: #DAE3E7;
 }
 
 .icon {
@@ -49,15 +53,19 @@ h3 {
 
 .headSpacer {
     height: 160px;
+    clear: both;
 }
 
 .spacer {
     height: 50px;
+    clear: both;
 }
 
 .smallSpacer {
     height: 25px;
+    clear: both;
 }
+
 .cardTitle {
     text-align: center;
     margin-top: 15px;
@@ -96,4 +104,8 @@ h3 {
 .block {
     background-color: white;
     padding: 2%;
+}
+
+.wide {
+    width: 100%;
 }
